--- a/src/main/resources/templates/privacy.html
+++ b/src/main/resources/templates/privacy.html
@@ -240,7 +240,7 @@
             <ul>
                 <li>Access or update your personal data.</li>
                 <li>Request deletion of your account or data.</li>
-                <li>Contact us regarding any privacy concern at: <a href="mailto:support@swapticket.com" class="contact-email">support@swapticket.com</a></li>
+                <li>Contact us regarding any privacy concern at: <a href="mailto:swap2ticket@gmail.com" class="contact-email">swap2ticket@gmail.com</a></li>
             </ul>
 
             <h2>7. Changes to This Policy</h2>
