--- a/src/main/resources/templates/refundpolicy.html
+++ b/src/main/resources/templates/refundpolicy.html
@@ -367,7 +367,7 @@
                     <p>For any refund-related queries or to report a problem, contact us at:</p>
                     <div class="contact-info">
                         <span>📧</span>
-                        <a href="mailto:support@swapticket.com" class="email-link">support@swapticket.com</a>
+                        <a href="mailto:swap2ticket@gmail.com" class="email-link">swap2ticket@gmail.com</a>
                     </div>
                 </div>
             </div>
